# ada-python

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yaml
data/: anthropic.json  cohere.json  gemini.json  google.json  openai.json  tools.yaml
examples/0-simple/: pyproject.toml
examples/0-simple/src/: main.py
examples/1-two-agents/: Makefile  pyproject.toml
examples/1-two-agents/src/: main.py
snippets/: README.md  agents.py  artifacts.py  github.py  metrics.py  tools.yaml
src/abcs/: anthropic.py  cohere.py  google_gemini.py  google_vertexai.py  groq.py  llm.py  models.py  ollama.py  openai.py  perplexity.py  tool_models.py  tools.py
src/agents/: ada.py  agent.py  aristotle.py  base.py  csv.py  descartes.py  engineer_coordinator.py  engineer_frontend.py  engineer_golang.py  engineer_prompt.py  engineer_python.py  engineer_reviewer.py  engineer_terraform.py  legal.py  news.py  planner.py  plato.py  stocks.py  sun_tzu.py  utils.py  weather.py
src/agents/prompts/: ada.md  csv.md  legal.md  news.md  planner.md  weather.md
src/agents/prompts/engineers/: coordinator.md  frontend.md  golang.md  prompt.md  python.md  reviewer.md  terraform.md
src/agents/prompts/people/: aristotle.md  descartes.md  plato.md  sun-tzu.md
src/metrics/: main.py
src/storage/: memory_storage.py  storage_manager.py
src/tools/: ada_cli.py  csv.py  files.py  github.py  location.py  neo4j.py  news.py  npm.py  perplexity_api.py  stocks.py  tool_manager.py  weather.py  web.py
