[tool.poetry]
name = "ada-python"
version = "0.2.1"
description = ""
authors = ["Will Beebe"]
packages = [
  {include = "abcs", from="src"},
  {include = "agents", from="src"},
  {include = "tools", from="src"},
  {include = "storage", from="src"},
  {include = "data", from="."}
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.0"
openai = "^1.35.3"
anthropic = "^0.29.0"
requests = "^2.31.0"
cohere = "^5.5.8"
websocket = "^0.2.1"
groq = "^0.9.0"
yfinance = "^0.2.38"
openai-multi-tool-use-parallel-patch = "^0.2.0"
ollama = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
select = ["E", "F", "W", "I001"]
ignore = ["E501", "F541"]
fixable = ["W", "I001"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
